<resources>
    <string name="app_name">ScoreBatApp</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_table">Table</string>
    <string name="title_highlight">Highlight</string>
    <string name="title_login">Login</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_name">Name</string>
    <string name="title_signup">Signup</string>
    <string name="loading_video">Loading...</string>

    // Facebook login
    <string name="facebook_app_id">751353923224717</string>
    <string name="facebook_client_token">1c28097b2db6543d7887435bf3e8dd26</string>



</resources>