<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.scorebatapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_highlits"
            app:destination="@id/navigation_highlits" />
    </fragment>

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="com.example.scorebatapp.ui.league.LeagueGameFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_league" >
        <action
            android:id="@+id/action_navigation_dashboard_to_navigation_details"
            app:destination="@id/navigation_details" />
    </fragment>

    <fragment
        android:id="@+id/navigation_table"
        android:name="com.example.scorebatapp.ui.table.TableFragment"
        android:label="@string/title_table"
        tools:layout="@layout/fragment_table" />

    <fragment
        android:id="@+id/navigation_highlits"
        android:name="com.example.scorebatapp.ui.video.VideoFragment"
        android:label="@string/title_highlight"
        tools:layout="@layout/fragment_table" />

    <fragment
        android:id="@+id/navigation_details"
        android:name="com.example.scorebatapp.ui.details.DetailsFragment"
        android:label="@string/title_details"
        tools:layout="@layout/fragment_details" />

    <fragment
        android:id="@+id/nav_contacts"
        android:name="com.example.scorebatapp.ui.contacts.ContactsFragment"
        android:label="@string/title_contacts"
        tools:layout="@layout/fragment_contacts" />

</navigation>